[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/AddPrint.gd" type="Script" id=1]
[ext_resource path="res://scripts/ItemList.gd" type="Script" id=2]
[ext_resource path="res://controls/ItemList.tscn" type="PackedScene" id=3]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.65098, 0.654902, 0.639216, 1 )

[sub_resource type="ConcavePolygonShape" id=3]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[node name="Spatial" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.3608, -0.287279, -4.25501 )

[node name="PrinterAddPlate" type="MeshInstance" parent="."]
transform = Transform( 0.405, 0, 0, 0, 0.011, 0, 0, 0, 0.381, 0, 0, -1.43051e-06 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )
script = ExtResource( 1 )

[node name="StaticBody" type="StaticBody" parent="PrinterAddPlate"]

[node name="CollisionShape" type="CollisionShape" parent="PrinterAddPlate/StaticBody"]
shape = SubResource( 3 )

[node name="Control" type="Control" parent="PrinterAddPlate"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" parent="PrinterAddPlate/Control" instance=ExtResource( 3 )]
visible = true
anchor_left = 0.146
anchor_top = 0.158
anchor_right = 0.826
anchor_bottom = 0.842
margin_left = -0.504013
margin_top = 0.199997
margin_right = 0.175964
margin_bottom = -0.200043
script = ExtResource( 2 )
[connection signal="input_event" from="PrinterAddPlate/StaticBody" to="PrinterAddPlate" method="_on_StaticBody_input_event"]
[connection signal="gui_input" from="PrinterAddPlate/Control" to="PrinterAddPlate" method="_on_Control_gui_input"]
[connection signal="item_selected" from="PrinterAddPlate/Control/ItemList" to="PrinterAddPlate" method="_on_ItemList_item_selected"]
